--- a/exercice/index.html
+++ b/exercice/index.html
@@ -15,9 +15,10 @@
         .entete {
             display: flex;
             align-items: center;
-            justify-content: space-between; /* Logo à gauche, navigation à droite */
-            background-color: #ddd4d4;
+            justify-content: space-between; /* Logo à gauche, navigation à droit du logo*/
+            background-color: rgb(18, 131, 206);
             padding: 10px 20px;
+            border-radius: 10px;
         }
         .hero{
             width: 100%;
@@ -25,7 +26,7 @@
             background-image: url(/exercice/image/fond-d-ecran-mars-2025-pc-3.png);
             background-size: cover;
             border: 4px solid black;
-            border-radius: 40px;
+            border-radius: 10px;
         
         }
 
@@ -47,8 +48,8 @@
        .techno{
 width: 500px;
 padding: 20px;
-border: 1px solid green;
-border-left: 4px solid green;
+border: 3px solid rgb(17, 61, 202);
+border-left: 6px solid rgb(28, 98, 250);
 border-radius: 10px;
 margin: 10px;
 
@@ -74,7 +75,7 @@ margin: 10px;
             display: flex;
             padding: 20px;
             padding-right: 40px;
-            border: 1px solid green;
+            border: 3px solid gray;
             border-radius: 20px;
     
 
@@ -85,7 +86,7 @@ margin: 10px;
         }
 
         .navigation a.active {
-            background-color: blue;
+            background-color: rgb(122, 245, 142);
             color: white;
         }
     </style>
