--- a/exercice/index.html
+++ b/exercice/index.html
@@ -23,10 +23,10 @@
         .hero{
             width: 100%;
             height: 400px;
-            background-image: url(/exercice/image/fond-d-ecran-mars-2025-pc-3.png);
+            background-image: url(/fond-d-ecran-mars-2025-pc-3.png);
             background-size: cover;
-            border: 4px solid black;
-            border-radius: 10px;
+            border: 3px solid black;
+            border-radius: 8px;
         
         }
 
@@ -48,10 +48,10 @@
        .techno{
 width: 500px;
 padding: 20px;
-border: 3px solid rgb(17, 61, 202);
-border-left: 6px solid rgb(28, 98, 250);
-border-radius: 10px;
-margin: 10px;
+border: 2px solid rgba(9, 9, 10, 0.829);
+border-left: 5px solid rgb(11, 12, 12);
+border-radius: 7px;
+margin: 8px;
 
 
        }
@@ -75,7 +75,7 @@ margin: 10px;
             display: flex;
             padding: 20px;
             padding-right: 40px;
-            border: 3px solid gray;
+            border: 3px solid rgba(15, 15, 15, 0.904);
             border-radius: 20px;
     
 
@@ -86,14 +86,14 @@ margin: 10px;
         }
 
         .navigation a.active {
-            background-color: rgb(122, 245, 142);
-            color: white;
+            background-color: rgb(243, 247, 24);
+            color: rgb(10, 10, 10);
         }
     </style>
 </head>
 <body>
     <header class="entete">
-        <img src="/exercice/image/e46fb3d604e8559da6d2ecca5f0c7e17.jpg" alt="logo" class="logo">
+        <img src="/e46fb3d604e8559da6d2ecca5f0c7e17.jpg" alt="logo" class="logo">
         <nav class="navigation">
             <a href="#index" class="active">Accueil</a>
             <a href="#about">À propos</a> 
