--- a/exercice/index.html
+++ b/exercice/index.html
@@ -161,8 +161,15 @@ margin: 8px;
          </div>
            <img src="conception-web-en-ligne.jpg" alt="active" class="dev">
     
-     </div>
-     
+        </div>
+       <video width="600" controls>
+  <source src="Crowd Of People Crossing The Street In Midtown Manhattan 4K Stock Video - Download Video Clip Now - iStock.mp4" type="video/mp4">
+  
+  Votre navigateur ne supporte pas la vidéo HTML5.
+</video> 
+
+
+     </video>
 
 </body>
 </html>
