--- a/exercice/index.html
+++ b/exercice/index.html
@@ -60,14 +60,14 @@
             border-left: 5px solid rgb(11, 12, 12);
             border-radius: 7px;
             margin: 8px;
-            background-color: rgb(129, 241, 204);
+             background-color: aqua;
 
 
        }
        .izi{
         text-align: end;
         margin-top: 25px;
-        background-color: rgb(1, 254, 254);
+        background-color: aqua;
         border: 2px solid black;
         border-radius: 10px;
         
