--- a/exercice/about.html
+++ b/exercice/about.html
@@ -6,6 +6,7 @@
     <title>A propos</title>
 </head>
 <body>
+    <p>la main de Dieu est plus puissante que celle des tenebres sur cette terre.</p>
     
 </body>
 </html>
